--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "vimeo/psalm": "^5.15"
     },
     "authors": [
         {
